k8s/sonarqube/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:lts-community
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /opt/sonarqube/conf
          name: sonar-config
        - mountPath: /opt/sonarqube/data
          name: sonar-data
        - mountPath: /opt/sonarqube/extensions
          name: sonar-extensions
        - mountPath: /opt/sonarqube/logs
          name: sonar-logs
      volumes:
      - name: sonar-config
        configMap:
          name: sonar-config
      - name: sonar-data
        persistentVolumeClaim:
          claimName: sonar-data-pvc
      - name: sonar-extensions
        persistentVolumeClaim:
          claimName: sonar-extensions-pvc
      - name: sonar-logs
        persistentVolumeClaim:
          claimName: sonar-logs-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: sonarqube
